--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
 
+    <div class="container">
+        <div class="clock-container">
+
+        </div>
+    </div>
+
     <script src="./index.js"></script>
 </body>
 
